--- a/src/CypherSheet.Client/Layout/MainLayout.razor
+++ b/src/CypherSheet.Client/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@using CypherSheet.Client.Services
+@using CypherSheet.Client.Components.Shared
 @inherits LayoutComponentBase
 @inject IThemeService ThemeService
 @implements IDisposable
@@ -19,6 +20,8 @@
         </MudContainer>
     </MudMainContent>
 </MudLayout>
+
+<LoadingOverlay />
 
 @code {
     private MudTheme _theme = new MudTheme()
