--- a/src/CypherSheet.Client/_Imports.razor
+++ b/src/CypherSheet.Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using CypherSheet.Storage
 @using CypherSheet.Client.Components
 @using CypherSheet.Client.Components.Dialogs
+@using CypherSheet.Client.Components.Shared
+@using CypherSheet.Client.Services
