--- a/src/CypherSheet.Client/_Imports.razor
+++ b/src/CypherSheet.Client/_Imports.razor
@@ -11,6 +11,7 @@
 @using MudBlazor
 @using CypherSheet.Domain
 @using CypherSheet.Storage
+@using CypherSheet.Shared
 @using CypherSheet.Client.Components
 @using CypherSheet.Client.Components.Dialogs
 @using CypherSheet.Client.Components.Shared
